# antirev

./: .gitignore  Cargo.toml  cert.pem  diesel.toml  key.pem
migrations/2024-07-27-143236_create_users/: down.sql  up.sql
migrations/2024-07-27-184234_create_posts/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: feed.html  output.css  post.html  signin.html  signup.html
