[package]
name = "antirev"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.8.0", features = ["rustls-0_23"] }
argon2 = "0.5.3"
askama = "0.12.1"
askama_actix = "0.14.0"
diesel = { version = "2.2.2", features = ["postgres", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
rustls = "0.23.12"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
